--- a/style.css
+++ b/style.css
@@ -26,6 +26,8 @@ body {
     transition: 200ms cubic-bezier(0.67, 0.19, 0.29, 0.87);
     min-height: 50px;
     min-width: 160px;
+    animation: emove 3s ease-in-out infinite;
+
 }
 
 .hoverClass:hover {
@@ -84,5 +86,9 @@ body {
 #text2 {
     width: 0%;
     height: 0%;
-    transition: 500ms cubic-bezier(0.67, 0.19, 0.28, 1.21);
+    transition: 500ms cubic-bezier(0.76, 0.09, 0.51, 1.2);
+    text-align: center;
+    font-size: 20px;
+    animation: emove 3s ease-in-out infinite;
+
 }
