--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
 }
 
 #LoveBTN {
+    z-index: 3;
     background: linear-gradient(145deg, #ffffff64, #ffffff64);
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
@@ -54,7 +55,7 @@ body {
     display: flex;
     transition: 500ms cubic-bezier(0.76, 0.09, 0.51, 1.2);
     transform: translateY(0px);
-    height: 15%;
+    height: 10%;
     width: 100%;
 }
 
@@ -91,4 +92,47 @@ body {
     font-size: 20px;
     animation: emove 3s ease-in-out infinite;
 
+}
+
+.emotion {
+    position: absolute;
+    z-index: 1;
+    font-size: 200px;
+}
+
+.emotion:nth-child(3) {
+    animation: emove1 3s ease-in-out infinite;
+}
+
+.emotion:nth-child(2) {
+    z-index: 2;
+    animation: emove2 3s ease-in-out infinite;
+}
+
+@keyframes emove1 {
+    0% {
+        transform: translateX(-10.5vw) rotateZ(-2deg);
+    }
+
+    50% {
+        transform: translateX(-9.5vw) rotateZ(2deg);
+    }
+
+    100% {
+        transform: translateX(-10.5vw) rotateZ(-2deg);
+    }
+}
+
+@keyframes emove2 {
+    0% {
+        transform: translateX(10.5vw) rotateZ(2deg);
+    }
+
+    50% {
+        transform: translateX(9.5vw) rotateZ(-2deg);
+    }
+
+    100% {
+        transform: translateX(10.5vw) rotateZ(2deg);
+    }
 }
