--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background: linear-gradient(135deg, #ee00ff, #9500ff);
+    background: linear-gradient(145deg, #ff7ad7, #c97eff);
     display: flex;
     justify-content: center;
     align-items: center;
