--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background: linear-gradient(145deg, #ffb9ea, #a14dde);
+    background: linear-gradient(145deg, #ffffff, #6cd1ea);
     display: flex;
     justify-content: center;
     align-items: center;
