--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+* {
+    text-shadow: 0 0 15px #00000077;
+}
+
 #LoveBTN {
     z-index: 3;
     background: linear-gradient(145deg, #ffffff64, #ffffff64);
