--- a/style.css
+++ b/style.css
@@ -1,11 +1,16 @@
 body {
-    background: linear-gradient(145deg, #ffffff, #6cd1ea);
+    background: linear-gradient(145deg, #aefaff, #ff5b5b);
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+* {
+    text-shadow: 0 0 15px #00000077;
+}
+
 #LoveBTN {
     z-index: 3;
     background: linear-gradient(145deg, #ffffff64, #ffffff64);
@@ -134,8 +139,4 @@ body {
     100% {
         transform: translateX(10.5vw) rotateZ(2deg);
     }
-}
-
-* {
-    text-shadow: 0 0 15px #00000077;
 }
