--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background: linear-gradient(145deg, #aefaff, #ff5b5b);
+    background: linear-gradient(145deg, #84ff92, #ffa163);
     display: flex;
     justify-content: center;
     align-items: center;
